--- a/Auto Spa - Car Wash/Gallery.html
+++ b/Auto Spa - Car Wash/Gallery.html
@@ -69,12 +69,12 @@
 
     <div class="container-fluid" style="margin-top: 100px">
         <div class="container text-center">
-            <button id="project-btn-1">&nbsp; &nbsp;All&nbsp; &nbsp;</button>
-            <button id="project-btn-2">Auto Detail</button>
-            <button id="project-btn-3">Hand Polish</button>
-            <button id="project-btn-4">Hand Wash</button>
-            <button id="project-btn-5">Hand wax</button>
-            <button id="project-btn-6">Triple Foam</button>
+            <button class="project-btn">&nbsp; &nbsp;All&nbsp; &nbsp;</button>
+            <button class="project-btn">Auto Detail</button>
+            <button class="project-btn">Hand Polish</button>
+            <button class="project-btn">Hand Wash</button>
+            <button class="project-btn">Hand wax</button>
+            <button class="project-btn">Triple Foam </button>
         </div>
     </div>
 
